--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 
-<body class="bg-transparent">
+<body class="bg-gray-300">
     {% include 'navbar.html' %}
     {% block body %}
     <div class="lg:container lg:mx-auto"
