--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -15,7 +15,7 @@
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto px-10">
         <div class="text-md lg:flex-grow">
-            <a href="{% url 'books' %}"
+            <a href="{% url 'stores' %}"
                 class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 font-semibold mr-4">
                 Stores
             </a>
