--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -25,18 +25,18 @@
             </a>
         </div>
         <div class="flex w-auto">
-            <a href="#"
+            <a href="{% url 'profile' %}"
                 class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a>
-            <a href="#"
+            <a href="{% url 'logout' %}"
                 class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
         </div>
         <div class="text-md lg:flex-grow"></div>
         <div>
-            <a href="#"
+            <a href="{% url 'login' %}"
                 class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
         </div>
         <div>
-            <a href="#"
+            <a href="{% url 'register' %}"
                 class="inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-white mt-4 lg:mt-0">Register</a>
         </div>
     </div>
