--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -16,7 +16,7 @@
         </span>
         <div class="flex justify-end w-full">
             <a href="{% url 'register' %}"
-                class="bg-blue-900 text-white rounded-md hover:bg-white hover:text-blue-900 hover:border-blue-900 shadow hover:shadow-lg py-2 px-4 border border-gray-900 hover:border-transparent">Register</a>
+                class="bg-teal-700 text-white rounded-md hover:bg-white hover:text-blue-900 hover:border-blue-900 shadow hover:shadow-lg py-2 px-4 border border-gray-900 hover:border-transparent">Register</a>
         </div>
     </div>
     <div class="w-full lg:w-1/2 lg:py-6 text-center ">
