--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-gray-300 p-6 px-10">
+<nav class="flex items-center justify-between flex-wrap bg-gray-500 p-6 px-10">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
         <span class="font-semibold text-xl tracking-tight text-blue-900"><a href="/">Khushir Library</a></span>
     </div>
@@ -19,25 +19,32 @@
                 class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 font-semibold mr-4">
                 Stores
             </a>
-            <a href="#"
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'deposit' %}"
                 class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 font-semibold mr-4">
                 Balance Deposit
             </a>
+            {% endif %}
         </div>
+        {% if request.user.is_authenticated %}
         <div class="flex w-auto">
+            <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} (balance :
+                {{request.user.account.balance}}) </div>
             <a href="{% url 'profile' %}"
-                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a>
+                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-teal-700 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a>
             <a href="{% url 'logout' %}"
-                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
+                class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-teal-700 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
         </div>
+        {% else %}
         <div class="text-md lg:flex-grow"></div>
         <div>
             <a href="{% url 'login' %}"
-                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
+                class="mr-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-teal-700 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-red-700 mt-4 lg:mt-0">Login</a>
         </div>
         <div>
             <a href="{% url 'register' %}"
-                class="inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-white mt-4 lg:mt-0">Register</a>
+                class="inline-block font-medium text-sm px-4 py-2 leading-none bg-teal-700 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-white mt-4 lg:mt-0">Register</a>
         </div>
+        {% endif %}
     </div>
 </nav>
