--- a/stores/templates/details.html
+++ b/stores/templates/details.html
@@ -15,7 +15,7 @@
         </span><br />
         <button>
             <a class="inline-block font-medium text-sm px-4 py-2 leading-none bg-teal-500 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0"
-                href="#">Borrow</a>
+                href="{% url 'profile' %}">Borrow</a>
         </button>
     </div>
     <div>
