--- a/accounts/templates/balance_deposit.html
+++ b/accounts/templates/balance_deposit.html
@@ -5,8 +5,9 @@
 
 {% block content %}
 
-<div class="w-full flex mt-5 justify-center ">
-    <div class="bg-white w-5/12 rounded-lg">
+<div class="w-full flex mt-5 justify-center h-screen">
+    <div class="bg-white w-5/12 rounded-lg"
+        style="height: 300px;">
         <h1 class="font-bold text-3xl text-center pb-5 pt-10 px-5">{{ title }}</h1>
         <form method="post"
             class="px-8 pt-6 pb-8 mb-4">
