--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,8 +1,52 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head_title %}
-Banking System
+Profile
 {% endblock %}
 {% block content %}
-<h1>Profile</h1>
+<div class="h-screen">
+    <h1 class="text-2xl font-semibold my-4">Borrowing History</h1>
+    <h3 class="text-xl my-2">You have borrowed {{borrowed_books | length}}</h3>
+    <table class="table-auto w-full bg-white rounded-md">
+        <thead>
+            <tr>
+                <th class="px-4 py-2">Borrowed Date</th>
+                <th class="px-4 py-2">Book Title</th>
+                <th class="px-4 py-2">Price</th>
+                <th class="px-4 py-2">Action</th>
+                <th class="px-4 py-2">Review</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for borrowed_book in borrowed_books %}
+            <tr class="text-center">
+                <td class="border px-4 py-2">{{ borrowed_book.borrowed_date }}</td>
+                <td class="border px-4 py-2"> {{ borrowed_book.book.title }}
+                    {% if borrowed_book.returned %}
+                    <small class="text-xs italic text-gray-500 align-bottom font-semibold">Returned</small>
+                    {% endif %}
+                </td>
+                <td class="border px-4 py-2">{{ borrowed_book.book.price }}</td>
+                <td class="border px-4 py-2">
+                    <form method="post"
+                        action="{% url 'return_book' %}">
+                        {% csrf_token %}
+                        <input type="hidden"
+                            name="book_id"
+                            value="{{ borrowed_book.book.id }}">
+                        <button type="submit"
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                            Return
+                        </button>
+                    </form>
+                </td>
+                <td class="border px-4 py-2">
+                    <a href="{% url 'review' borrowed_book.book.id %}"
+                        class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-700 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Review</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
