--- a/stores/templates/stores.html
+++ b/stores/templates/stores.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="h-full">
+<div class="h-screen">
     <div class="flex items-start mt-4 h-auto">
         <div class="category mr-4">
             <h1 class="text-xl font-semibold italic">Select Category</h1>
