--- a/stores/templates/stores.html
+++ b/stores/templates/stores.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="h-screen">
-    <div class="flex items-start mt-4 h-auto">
+<div class="h-auto">
+    <div class="flex items-start mt-4">
         <div class="category mr-4">
             <h1 class="text-xl font-semibold italic">Select Category</h1>
             <ul>
