--- a/stores/templates/borrow_mail.html
+++ b/stores/templates/borrow_mail.html
@@ -4,5 +4,5 @@
     {{user.account.balance}}</p>
 
 <p>Thanks for using our system</p>
-<h4 style="font-style: italic;">Enjoy your life!</h4>
+<h4 style="font-style: italic;">Enjoy your life! Stay with us.</h4>
 <h1>Khushi Library</h1>
